añadir las dos llamadas que faltaban (replies de una reply y comments de un user)
