# config/routes.rb
@@ -27,7 +27,8 @@ Rails.application.routes.draw do
 
   scope "/api",defaults: {format: 'json'} do
     #contributions
-    get 'contributions', to: 'api/contributions#index', as: 'index_api'
+    get '/', to: 'api/contributions#index', as: 'index_api'
+    get 'contributions', to: 'api/contributions#index', as: 'root_api'
     get 'newest', to: 'api/contributions#newest', as: 'newest_api'
     get 'ask', to: 'api/contributions#ask', as: 'ask_api'
     get 'contributions/users/:id', to: 'api/contributions#showcontributionsofuser', as: 'contributionsofuser_api'
@@ -41,29 +42,34 @@ Rails.application.routes.draw do
     #likes
     post '/contributions/:id/likes', to: 'api/contributions#like', as: 'like_api'
     delete '/contributions/:id/likes', to: 'api/contributions#dislike', as: 'dislike_api'
+    post 'comments/:id/likes', to: 'api/comments#like', as: 'comment_like'
+    delete 'comments/:id/likes', to: 'api/comments#dislike', as: 'comment_dislike'
+    post 'replies/:id/likes', to: 'api/replies#like', as: 'reply_like'
+    delete 'replies/:id/likes', to: 'api/replies#dislike', as: 'reply_dislike'
     
+    
+    #users
     get 'users/:id', to: 'api/users#show', as: 'show_user_api'
     get 'myprofile', to: 'api/users#showMyProfile', as: 'getMyProfile'
     put 'myprofile', to: 'api/users#updateProfile', as: 'updateMyProfile'
     
     #comments
+    get 'comments/users/:id', to: 'api/comments#showcommentsofuser', as: 'commentsofuser_api'
     get 'comments/upvoted', to: 'api/comments#upvoted_comments', as: 'upvoted_comments'
     get 'contributions/:id/comments', to: 'api/contributions#showComments', as: 'comment_api'
     post 'contributions/:id/comments', to: 'api/comments#create', as: 'comments_create'
     get 'comments/:id', to: 'api/comments#showComment', as: 'comment_show'
     delete 'comments/:id', to: 'api/comments#destroy', as: 'comment_delete'
     put 'comments/:id', to: 'api/comments#update', as: 'comment_update'
-    post 'comments/:id/likes', to: 'api/comments#like', as: 'comment_like'
-    delete 'comments/:id/likes', to: 'api/comments#dislike', as: 'comment_dislike'
+
     
     #replies
+    get 'replies/:id/replies', to: 'api/replies#show_replies', as: 'replies_replies_api'
     get 'comments/:id/replies', to: 'api/replies#show', as: 'replies_api'
     post 'comments/:id/replies', to: 'api/replies#create', as: 'replies_create'
     get 'replies/:id', to: 'api/replies#showReply', as: 'reply_show'
     delete 'replies/:id', to: 'api/replies#destroy', as: 'reply_delete'
     put 'replies/:id', to: 'api/replies#update', as: 'reply_update'
-    post 'replies/:id/likes', to: 'api/replies#like', as: 'reply_like'
-    delete 'replies/:id/likes', to: 'api/replies#dislike', as: 'reply_dislike'
     post 'replies/:id', to: 'api/replies#create_recursive', as: 'reply_create_recursive'
     
   end
